k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
spec:
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
